# botfile

napcatbot/tmp/: napcat.mjs  package-lock.json
zero/data/chatcount/: chatcount.db
zero/data/chess/: chess.db
zero/data/control/: plugins.db
zero/data/driftbottle/: sea.db
zero/data/guessmusic/: config.json
zero/data/score/: score.db
zero/data/wallet/: wallet.db
zoer2/ZeroBot-Plugin-master/: config.json  main.go
zoer2/ZeroBot-Plugin-master/data/bilibilipush/: push.db
zoer2/ZeroBot-Plugin-master/data/chatcount/: chatcount.db
zoer2/ZeroBot-Plugin-master/data/control/: plugins.db  stor.spb
zoer2/ZeroBot-Plugin-master/data/guessmusic/: config.json
zoer2/ZeroBot-Plugin-master/data/job/: job.db
zoer2/ZeroBot-Plugin-master/data/manager/: config.db
zoer2/ZeroBot-Plugin-master/data/qzone/: qzone.db
zoer2/ZeroBot-Plugin-master/data/score/: score.db
zoer2/ZeroBot-Plugin-master/data/sleep/: manage.db
zoer2/ZeroBot-Plugin-master/data/wallet/: wallet.db
zoer2/ZeroBot-Plugin-master/qqbot/: pyproject.toml
zoer2/ZeroBot-Plugin-master/qqbot2/: README.md  pyproject.toml
zoer2/ZeroBot-Plugin-master/qqbot2/qqbot3/: README.md  pyproject.toml
zoer2/ZeroBot-Plugin-master/qqbot2/qqbot3/qqbot4/: README.md  pyproject.toml
zoer2/ZeroBot-Plugin-master/qqbot2/qqbot3/qqbot4/src/plugins/: bot.py
zoer2/ZeroBot-Plugin-master/qqfkbot/: .env.prod  README.md  bot.py  pyproject.toml
